--- a/VeganEats/src/styles.scss
+++ b/VeganEats/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Andika', sans-serif;
+}
+
+// body {
+//     height: 100vh;
+//     background-color: red;
+// }
+
+img {
+    width: 100%;
+}
