--- a/VeganEats/src/app/app.component.scss
+++ b/VeganEats/src/app/app.component.scss
@@ -1,7 +1,7 @@
-.background {
-    background-position-x: 10px;
-    background-position-y: -90px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url(../assets/img/back.png);
-}
+// .background {
+//     background-position-x: 10px;
+//     background-position-y: -90px;
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//     background-image: url(../assets/img/back.png);
+// }
