--- a/VeganEats/src/app/header/header.component.html
+++ b/VeganEats/src/app/header/header.component.html
@@ -1,36 +1,38 @@
 <!-- header -->
 <header>
-    <div class="logo-container">
-        <div class="logo-image">
-            <embed src="../../assets/img/shallow-pan-of-food.svg">
-            <h1> <span class="veg">Vegan</span> <span class="eats">Eats</span> </h1>
-        </div>
-        
-
-        <div class="links-container">
-
-            <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-
-                <li>
-                    <a href="">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="">
-                        <i class="fa-brands fa-square-twitter"></i>
-                    </a>
-                </li>
-            </ul>
+    <div class="header-container">
+        <div class="logo-container">
+            <div class="logo-image">
+                <embed src="../../assets/img/shallow-pan-of-food.svg">
+                <h1> <span class="veg">Vegan</span> <span class="eats">Eats</span> </h1>
+            </div>
+            
     
-        </div>
-
-        <div class="burger-menu-container">
-            <i class="fa-solid fa-bars"></i>
+            <div class="links-container">
+    
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+    
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+    
+                    <li>
+                        <a href="">
+                            <i class="fa-brands fa-square-twitter"></i>
+                        </a>
+                    </li>
+                </ul>
+        
+            </div>
+    
+            <div class="burger-menu-container">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </div>
     </div>
 </header>
