--- a/VeganEats/src/app/footer/footer.component.html
+++ b/VeganEats/src/app/footer/footer.component.html
@@ -1,1 +1,45 @@
-<p>footer works!</p>
+<!-- <footer>
+    <div class="footer-container">
+        footer
+    </div>
+</footer> -->
+
+<footer class="footer">
+    
+    <ul class="social-icon">
+        <li class="social-icon__item">
+            <a class="social-icon__link" href="#">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+        </li>
+
+        <li class="social-icon__item">
+            <a class="social-icon__link" href="#">
+                <i class="fa-brands fa-square-twitter"></i>
+            </a>
+        </li>
+
+        <li class="social-icon__item">
+            <a class="social-icon__link" href="#">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+        </li>
+
+        <li class="social-icon__item">
+            <a class="social-icon__link" href="#">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+        </li>
+
+
+    </ul>
+    <ul class="menu">
+      <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
+
+    </ul>
+    <p>&copy;2021 VeganEats | All Rights Reserved</p>
+  </footer>
